--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
+<!DOCTYPE html>
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <h1>Blackjack</h1>
-        <p id="message-el">Want to play a round?</p>
-        <p id="cards-el">Cards:</p>
-        <p id="sum-el">Sum:</p>
-        <button onclick="startGame()">START GAME</button>
-        <button onclick="newCard()">NEW CARD</button>
-        <p id="player-el"></p>
-        <script src="index.js"></script>
-    </body>
+  <head>
+    <link rel="stylesheet" href="index.css">
+    <title>Blackjack Game</title>
+  </head>
+  <body>
+    <h1>Blackjack Game</h1>
+    <button onclick="startGame()">Start Game</button>
+    <button onclick="hit()">Hit</button>
+    <button onclick="stand()">Stand</button>
+    <button onclick="restartGame()">Restart Game</button>
+    
+    <p>Your cards: <span id="player-hand"></span></p>
+    <p>Dealer's cards: <span id="dealer-hand"></span></p>
+    <p id="message"></p>
+    
+    <script src="index.js"></script>
+  </body>
 </html>
